# svmafia-contract

./: Anchor.toml  package-lock.json  package.json  readme.md
programs/solana-contract/: Cargo.toml
programs/solana-contract/src/: lib.rs
scripts/: README.md  advance-phase.ts  cast-vote.ts  claim-winnings.ts  initialize-game.ts  join-game.ts  night-action.ts  start-game.ts  view-game.ts
tests/: solana-contract.ts
